# mag-usb

./: .gitignore  .readthedocs.yaml  CHANGES.txt  CMakeLists.txt  CONTRIBUTING.md  README.md  dmesg_output.txt  importantUDEVcmd.txt  lsusb_Pololu_ttyACM0.txt  mag-usb_output.txt  mag_usb_build.mk  main.c  main.h  mkdocs.yml
assets/: Add TOML Config.md  Force USB ttyACM type device to use a specific device entry in the Linux dev directory.md  Mike & Claude's Second Code Review.md  POSIX Threads Signal Example.md  Scratch notes for mapping Pololu adaptor to fixed name entry in dev..txt  Timer Expiration Handler Example.c  USB Device in Proxmox Container.md  ctrl-c_example.c  i2c_pololu.c  main.c  udevadm_ttyACM0.txt
detritis/: config.cpp
docs/: Code-Review-and-Critique-2026-05-15-by-gemini-3-flash-preview.md  Configuration.md  Data-Format.md  Development.md  Getting-Started.md  Hardware-Setup.md  Limitations.md  Orientation-and-Axes.md  Requirements.md  Troubleshooting.md  WebSocket-Options.md  conf.py  index.md  requirements.txt
install/: 99-PololuI2C.rules  Beelink or other device configuration notes.md
src/: cmdmgr.c  cmdmgr.h  config.c  config.h  config.toml  i2c-pololu.c  i2c-pololu.h  i2c.c  i2c.h  i2c_pololu.c  interface.h  magdata.c  magdata.h  main.c  main.h  rm3100.h  sensor_tests.c  sensor_tests.h  ws_bridge.cpp  ws_bridge.h
tests/: test_i2c_pololu.c  test_websocket.cpp
tools/: config.toml  ws_client.cpp  ws_client.html
